another field added

--- a/team1.html
+++ b/team1.html
@@ -32,6 +32,10 @@ body {
 	  <td><label for="ag"><b>age:</label></td>
   	  <td><input type="text" id="ag" name="ag" value="100"></td>
 	</tr>
+<tr>
+	  <td><label for="ph"><b>Phone:</label></td>
+  	  <td><input type="text" id="ph" name="ph" value="100"></td>
+	</tr>
 	<tr>
 	   <td><label for="crse"><b>Course Name:</label></td>
   	   <td><input type="text" id="crse" name="crse" value="DevOPs Engineering"></td>
